src/monster.hpp

void initDemon(Entity* my, Stat* myStats);
void initSpider(Entity* my, Stat* myStats);
void initLich(Entity* my, Stat* myStats);
void initImp(Entity* my, Stat* myStats);
void initGnome(Entity* my, Stat* myStats);
void initDevil(Entity* my, Stat* myStats);
void initAutomaton(Entity* my, Stat* myStats);
void initCockatrice(Entity* my, Stat* myStats);
void initCrystalgolem(Entity* my, Stat* myStats);
void initScarab(Entity* my, Stat* myStats);
void initKobold(Entity* my, Stat* myStats);
void initShadow(Entity* my, Stat* myStats);
void initVampire(Entity* my, Stat* myStats);
void initIncubus(Entity* my, Stat* myStats);
void initInsectoid(Entity* my, Stat* myStats);
void initGoatman(Entity* my, Stat* myStats);
void initLichFire(Entity* my, Stat* myStats);
void initLichIce(Entity* my, Stat* myStats);
void initSentryBot(Entity* my, Stat* myStats);
void initGyroBot(Entity* my, Stat* myStats);
void initDummyBot(Entity* my, Stat* myStats);
void initMimic(Entity* my, Stat* myStats);
void initBat(Entity* my, Stat* myStats);
void initBugbear(Entity* my, Stat* myStats);
void initMonsterD(Entity* my, Stat* myStats);
void initMonsterM(Entity* my, Stat* myStats);
void initMonsterS(Entity* my, Stat* myStats);
void initMonsterG(Entity* my, Stat* myStats);
void initRevenantSkull(Entity* my, Stat* myStats);
void initAdorcisedWeapon(Entity* my, Stat* myStats);
void initMiniMimic(Entity* my, Stat* myStats);
void initFlameElemental(Entity* my, Stat* myStats);
void initHologram(Entity* my, Stat* myStats);
void initMoth(Entity* my, Stat* myStats);
void initEarthElemental(Entity* my, Stat* myStats);
void initDuck(Entity* my, Stat* myStats);
//--act*Limb functions--
void actHumanLimb(Entity* my);
void actGoblinLimb(Entity* my);
void actScorpionTail(Entity* my);
void actSuccubusLimb(Entity* my);
void actTrollLimb(Entity* my);
void actShopkeeperLimb(Entity* my);
void actSkeletonLimb(Entity* my);
void actMinotaurLimb(Entity* my);
void actGhoulLimb(Entity* my);
void actDemonLimb(Entity* my);
void actSpiderLimb(Entity* my);
void actLichLimb(Entity* my);
void actImpLimb(Entity* my);
void actGnomeLimb(Entity* my);
void actDevilLimb(Entity* my);
void actAutomatonLimb(Entity* my);
void actCockatriceLimb(Entity* my);
void actCrystalgolemLimb(Entity* my);
void actKoboldLimb(Entity* my);
void actShadowLimb(Entity* my);
void actVampireLimb(Entity* my);
void actIncubusLimb(Entity* my);
void actInsectoidLimb(Entity* my);
void actGoatmanLimb(Entity* my);
void actScarabLimb(Entity* my);
void actLichFireLimb(Entity* my);
void actLichIceLimb(Entity* my);
void actSentryBotLimb(Entity* my);
void actGyroBotLimb(Entity* my);
void actDummyBotLimb(Entity* my);
void actMimicLimb(Entity* my);
void actBatLimb(Entity* my);
void actBugbearLimb(Entity* my);
void actMonsterDLimb(Entity* my);
void actMonsterMLimb(Entity* my);
void actMonsterSLimb(Entity* my);
void actMonsterGLimb(Entity* my);
void actRevenantSkullLimb(Entity* my);
void actMiniMimicLimb(Entity* my);
void actAdorcisedWeaponLimb(Entity* my);
void actFlameElementalLimb(Entity* my);
void actHologramLimb(Entity* my);
void actMothLimb(Entity* my);
void actEarthElementalLimb(Entity* my);
void actDuckLimb(Entity* my);
//--*Die functions--
void humanDie(Entity* my);
void ratDie(Entity* my);
void goblinDie(Entity* my);
void slimeDie(Entity* my);
void scorpionDie(Entity* my);
void succubusDie(Entity* my);
void trollDie(Entity* my);
void shopkeeperDie(Entity* my);
void skeletonDie(Entity* my);
void minotaurDie(Entity* my);
void ghoulDie(Entity* my);
void demonDie(Entity* my);
void spiderDie(Entity* my);
void lichDie(Entity* my);
void impDie(Entity* my);
void gnomeDie(Entity* my);
void devilDie(Entity* my);
void automatonDie(Entity* my);
void cockatriceDie(Entity* my);
void crystalgolemDie(Entity* my);
void scarabDie(Entity* my);
void koboldDie(Entity* my);
void shadowDie(Entity* my);
void vampireDie(Entity* my);
void incubusDie(Entity* my);
void insectoidDie(Entity* my);
void goatmanDie(Entity* my);
void lichFireDie(Entity* my);
void lichIceDie(Entity* my);
void sentryBotDie(Entity* my);
void gyroBotDie(Entity* my);
void dummyBotDie(Entity* my);
void mimicDie(Entity* my);
void batDie(Entity* my);
void bugbearDie(Entity* my);
void monsterDDie(Entity* my);
void monsterMDie(Entity* my);
void monsterSDie(Entity* my);
void monsterGDie(Entity* my);
void revenantSkullDie(Entity* my);
void miniMimicDie(Entity* my);
void adorcisedWeaponDie(Entity* my);
void flameElementalDie(Entity* my);
void hologramDie(Entity* my);
void mothDie(Entity* my);
void earthElementalDie(Entity* my);
void duckDie(Entity* my);
void monsterAnimate(Entity* my, Stat* myStats, double dist);
//--*MoveBodyparts functions--
void humanMoveBodyparts(Entity* my, Stat* myStats, double dist);
void ratAnimate(Entity* my, double dist);
void goblinMoveBodyparts(Entity* my, Stat* myStats, double dist);
void slimeSetType(Entity* my, Stat* myStats, bool sink, BaronyRNG* rng);
void slimeSprayAttack(Entity* my);
void slimeAnimate(Entity* my, Stat* myStats, double dist);
void scorpionAnimate(Entity* my, double dist);
void succubusMoveBodyparts(Entity* my, Stat* myStats, double dist);
void trollMoveBodyparts(Entity* my, Stat* myStats, double dist);
void shopkeeperMoveBodyparts(Entity* my, Stat* myStats, double dist);
void skeletonMoveBodyparts(Entity* my, Stat* myStats, double dist);
void minotaurMoveBodyparts(Entity* my, Stat* myStats, double dist);
void ghoulMoveBodyparts(Entity* my, Stat* myStats, double dist);
void demonMoveBodyparts(Entity* my, Stat* myStats, double dist);
void spiderMoveBodyparts(Entity* my, Stat* myStats, double dist);
void lichAnimate(Entity* my, double dist);
void impMoveBodyparts(Entity* my, Stat* myStats, double dist);
void gnomeMoveBodyparts(Entity* my, Stat* myStats, double dist);
void devilMoveBodyparts(Entity* my, Stat* myStats, double dist);
void cockatriceMoveBodyparts(Entity* my, Stat* myStats, double dist);
void automatonMoveBodyparts(Entity* my, Stat* myStats, double dist);
void crystalgolemMoveBodyparts(Entity* my, Stat* myStats, double dist);
void scarabAnimate(Entity* my, Stat* myStats, double dist);
void koboldMoveBodyparts(Entity* my, Stat* myStats, double dist);
void shadowMoveBodyparts(Entity* my, Stat* myStats, double dist);
void vampireMoveBodyparts(Entity* my, Stat* myStats, double dist);
void incubusMoveBodyparts(Entity* my, Stat* myStats, double dist);
void insectoidMoveBodyparts(Entity* my, Stat* myStats, double dist);
void goatmanMoveBodyparts(Entity* my, Stat* myStats, double dist);
void lichFireAnimate(Entity* my, Stat* myStats, double dist);
void lichIceAnimate(Entity* my, Stat* myStats, double dist);
void sentryBotAnimate(Entity* my, Stat* myStats, double dist);
void gyroBotAnimate(Entity* my, Stat* myStats, double dist);
void dummyBotAnimate(Entity* my, Stat* myStats, double dist);
void mimicAnimate(Entity* my, Stat* myStats, double dist);
void batAnimate(Entity* my, Stat* myStats, double dist);
void bugbearMoveBodyparts(Entity* my, Stat* myStats, double dist);
void monsterDMoveBodyparts(Entity* my, Stat* myStats, double dist);
void monsterMMoveBodyparts(Entity* my, Stat* myStats, double dist);
void monsterSMoveBodyparts(Entity* my, Stat* myStats, double dist);
void monsterGMoveBodyparts(Entity* my, Stat* myStats, double dist);
void revenantSkullAnimate(Entity* my, Stat* myStats, double dist);
void hologramAnimate(Entity* my, Stat* myStats, double dist);
int mothGetAttackPose(Entity* my, int basePose);
void mothAnimate(Entity* my, Stat* myStats, double dist);
void earthElementalAnimate(Entity* my, Stat* myStats, double dist);
void duckAnimate(Entity* my, Stat* myStats, double dist);
void duckSpawnFeather(int sprite, real_t x, real_t y, real_t z, Entity* my);
bool duckAreaQuck(Entity* my);
//--misc functions--
void actMinotaurTrap(Entity* my);
int getMinotaurTimeToArrive();
void actMinotaurTimer(Entity* my);
void actMinotaurCeilingBuster(Entity* my);
void actDemonCeilingBuster(Entity* my);
void actDevilTeleport(Entity* my);
void createMinotaurTimer(Entity* entity, map_t* map, Uint32 seed);
void actSummonTrap(Entity* my);
int monsterCurve(int level);
bool forceFollower(Entity& leader, Entity& follower);
//--animates the selected limb to setpoint along the axis, at the given rate.
int limbAnimateToLimit(Entity* limb, int axis, double rate, double setpoint, bool shake, double shakerate);
//--animates the selected limb to setpoint, then endpoint along the axis, provided MONSTER_LIMB_OVERSHOOT is set
int limbAnimateWithOvershoot(Entity* limb, int axis, double setpointRate, double setpoint, double endpointRate, double endpoint, int dir);
int limbAngleWithinRange(real_t angle, double rate, double setpoint);
real_t normaliseAngle2PI(real_t angle);
void getTargetsAroundEntity(Entity* my, Entity* originalTarget, double distToFind, real_t angleToSearch, int searchType, list_t** list);
int numTargetsAroundEntity(Entity* my, double distToFind, real_t angleToSearch, int searchType);
// monster custom NPC chatter
bool handleMonsterChatter(int monsterclicked, bool ringconflict, char namesays[64], Entity* my, Stat* myStats);